added google seo verification tag

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/sdv5amy.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="tfOPgfuYeoesVb5S2X1HCijn5XXZ6Uq4DRscQifVMa8" />
     <meta
       name="description"
       content="Official Website of Atrioc Chat Labor Union"
