--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <link rel="stylesheet" href="https://use.typekit.net/sdv5amy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/sdv5amy.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="google-site-verification" content="tfOPgfuYeoesVb5S2X1HCijn5XXZ6Uq4DRscQifVMa8" />
+    <meta
+      name="google-site-verification"
+      content="tfOPgfuYeoesVb5S2X1HCijn5XXZ6Uq4DRscQifVMa8"
+    />
     <meta
       name="description"
       content="Official Website of Atrioc Chat Labor Union"
